DB-8256 fix spotbugs